changing page object creation and adding component methods